# test2

./: pyproject.toml
tests/: test_test2.py
