[tool.poetry]
name = "test2"
version = "0.1.0"
description = ""
authors = ["juyoung-yoo <juyoung.yoo@meshkorea.net>"]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0a5"]
build-backend = "poetry.core.masonry.api"
